<resources>
    <string name="title_activity_sample_tab">sampleTabActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="app_name">Pitstop</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_car">Add Car</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="title_activity_car_details">CarDetailsActivity</string>
    <string name="title_activity_receive_debug">ReceiveDebugActivity</string>
    <string name="title_activity_piddebug">PIDDebugActivity</string>
    <string name="title_activity_enviornmental_check">EnviornmentalCheckActivity</string>
    <string name="title_activity_display_item">Issue details</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_logout_key">pref_logout</string>
    <string name="pref_logout_label">Log Out</string>
    <string name="pref_email_key">pref_email_key</string>
    <string name="pref_username_key">pref_username_key</string>
    <string name="pref_phone_number_key">pref_phone_number_key</string>
    <string name="pref_privacy_policy">pref_privacy_policy</string>
    <string name="pref_term_of_use">pref_term_of_use</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pref_vehicles">vehicles</string>
    <string name="appinfo">appinfo</string>
    <string name="app_build_no">1.0.10</string>
    <string name="add_car_bluetooth">Use the Search for Car button to scan for car. Make sure your device is plugged in and ready to go. Below are various location that the OBD plug can be at.</string>
    <string name="add_car_manual">Enter your vehicle\'s mileage and VIN. Below are the various location that the VIN scannerId code can be at.</string>
    <string-array name="severity_indicators">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
        <item>Critical</item>
    </string-array>
    <string name="camera_request_rationale">Access to the camera is needed for barcode detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="title_activity_barcode_capture">BarcodeCaptureActivity</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="location_request_rationale">Access to device location is needed for bluetooth feature and trip tracking</string>
    <string name="appversion">app_version</string>
    <string name="title_activity_select_dealership">Select Dealership</string>
    <string name="title_activity_car_scan">Car Scan</string>
    <string name="notification_reply">Feel Free to Reply</string>
    <string name="welcome">Welcome to Pitstop</string>
    <string name="description1">With Pitstop, we deliver the power of service to the convenience of the smartphone. Pitstop provides real-time notifications on recommended services and diagnostic reports, directly to the user\'s smartphone.</string>
    <string name="whathappen">What\'s About to Happen?</string>
    <string name="description2">With PitStop, we deliver the power of service to the convenience of the smartphone. Pitstop provides real-time notifications on recommended services and diagnostic reports, directly to the user\'s smartphone.</string>
    <string name="whatneeded">What is needed from you</string>
    <string name="bluetooth_header">Bluetooth for Module</string>
    <string name="internet_header">Internet Connection</string>
    <string name="car_header">Car for Diagnostics</string>
    <string name="bluetooth_desc">Turn on your bluetooth connection in order to connect to the module.</string>
    <string name="internet_desc">Turn on your internet connection in order for us to tell you what\'s going on with your car</string>
    <string name="car_desc">Turn your car on in order for the module to send data back to the app</string>
    <string name="report_data">Terminal upload data:</string>
    <string name="service_request_dialog_pick_date_hint">Tap to pick a date</string>
    <string name="service_request_dialog_pick_time_hint">Tap to pick a time</string>
    <string name="service_request_dialog_additional_comments_hint_comments">Additional comments</string>
    <string name="service_request_dialog_additional_comments_hint_salesperson">The name of your salesman</string>
    <string name="service_request_dialog_time_picker_title">Please pick a time for your service</string>
    <string name="service_request_dialog_date_picker_title">Please pick a date for your service</string>
    <string name="service_request_dialog_summary_title">Request Summary</string>
    <string name="service_request_dialog_prompt_title">Request Service</string>
    <string name="service_request_dialog_prompt_message">Do you want to book your service appointment right now?</string>
    <string name="first_service_booking_1">Let\'s be proactive and book your vehicle\'s 1st service appointment today. </string>
    <string name="first_service_booking_2">Pitstop has calculated an estimated time we believe you will be due for your 1st service appointment.\n\nWhen your appointment is getting close, we will send you a reminder letting you know you whether or not you are due for service.\n\nThe power of being connected.</string>
    <string name="first_service_booking_tutorial_button_text">Book 1st service appointment</string>
    <string name="first_service_booking_cancel_title">Quit Booking</string>
    <string name="first_service_booking_cancel_message">Are you sure you don\'t want to book your 1st service appointment? By booking your tentative appointment you are securing your preferred date and time and creating a on \"vehicle maintenance\" reminder for yourself.</string>
    <string name="service_request_button">Request Service</string>
    <string name="flat_tire_description">The tires on your vehicle are what keep it rolling. They take a beating from sharp turns, rocks, potholes, changes in temperature and the wear from friction on the road. It\'s time for you to inspect tire pressure and wear. Tires in poor condition can cause other mechanical parts to wear out faster.</string>
    <string name="engine_oil_filter_description">Change engine oil and replace engine filter to remove contaminants and prolong the life of your motor.</string>
    <string name="wipers_fluids_description">Visibility is a critical part of safety while driving. Making sure your fluids are topped up and windshield wipers are intact is an important way to make sure your car is safe to drive.</string>
    <string name="tow_truck_description">Send an emergency request to the dealership to help you get your vehicle into the shop. Breakdowns are frustrating we are here to help. Be aware of the hours of operation of the dealership, after hours you may need to call a tow truck yourself.</string>
    <string name="shuttle_service_description">Request for the dealership to coordinate a loaner vehicle or a shuttle to pick you up from your location.</string>
    <string name="title_activity_add_custom_issue">Add Custom Service</string>
    <string name="add_preset_issue_dialog_title">Add Custom Service</string>
    <string name="preset_issue_service_emergency">Emergency</string>
    <string name="preset_issue_service_replace">Replace</string>
    <string name="preset_issue_service_request">Request</string>
    <string name="preset_issue_item_flat_tire">Flat Tire</string>
    <string name="preset_issue_item_tow_truck">Tow Truck</string>
    <string name="preset_issue_item_engine_oil_filter">Engine Oil &amp; Filter</string>
    <string name="preset_issue_item_wipers_fluids">Wipers/Fluids</string>
    <string name="preset_issue_item_shuttle_service">Shuttle Service</string>
    <string name="add_preset_issue_dialog_prompt_message">Do you want to add more services in addition to the services already in your dashboard?</string>
    <string name="dialog_clear_issue_title">When was this service completed?</string>
    <string name="start_dialog_setup_title">Setup</string>
    <string name="start_dialog_setup_description"> This test app is design for technicians to collect vehicle data which is allows Pitstop to predict engine failures. Enter your email so we can send you a $100 gift card on every 30 vehicles that you test.</string>
    <string name="start_dialog_connect_title">Connect to Device</string>
    <string name="start_dialog_connect_description">Connect to the device to start testing.  Please make sure the device is plugged in and the vehicle engine is running.</string>
    <string name="add_preset_issue_dialog_detail_title">Detail</string>
    <string-array name="permissions_location">
        <item>android.permission.ACCESS_FINE_LOCATION</item>
        <item>android.permission.ACCESS_COARSE_LOCATION</item>
    </string-array>
    <string name="request_permission_message_default">Please grant our permission requests to allow Pitstop app to function.</string>
    <string name="request_permission_location_message">To communicate with the Pitstop Bluetooth device, we need the permission to access your location. We will not actually use or share your location with others.</string>
    <string name="transition_name_issue_card">transition_name_issue_card</string>
    <string name="transition_name_issue_title">transition_name_issue_title</string>
    <string name="transition_name_issue_description">transition_name_issue_description</string>
    <string name="transition_name_request_service_btn">transition_name_request_service_btn</string>
    <string name="try_again">TRY AGAIN</string>
    <string name="notifications">Notifications</string>
    <string name="feature_bluetooth">Pitstop uses a device that is installed into the diagnostic port of your vehicle which transmits the vehicle\'s engine and sensor data to your phone over bluetooth.</string>
    <string name="feature_cloud">"Pitstop is thoroughly compiling data sources from manufacturers, dealerships, and other vehicles to consistently provide with you with the most accurate information about your vehicle.</string>
    <string name="feature_notification">Pitstop alerts you when your vehicle is due for service, when there\'s a manufacturing recall, and when there is an issue with your engine.</string>
    <string name="debug_toast_message">This is a debug build - </string>
    <string name="logging_in_message">Logging in...</string>
    <string name="sign_up_fb">Sign up with facebook</string>
    <string name="log_in_button">LOG IN</string>
    <string name="log_in_fb">Log in with Facebook</string>
    <string name="sign_up_button">SIGN UP</string>
    <string name="internet_check_error">Please check your internet connection</string>
    <string name="empty_email_pass_error">Email or Password Field are not filled</string>
    <string name="empty_name_error">First and last name are required</string>
    <string name="password_length_error">Password length must be greater than 8</string>
    <string name="email_hint">Email</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="forgot_password_button">Forgot password?</string>
</resources>