<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <ImageView
        android:id="@+id/bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/slider3"/>

    <LinearLayout
        android:id="@+id/splash_login_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_margin="32dp"
            android:src="@drawable/whitelogo"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/firstNameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:theme="@style/TextInputTheme"
                android:visibility="gone">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/firstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:backgroundTint="#dedede"
                    android:ems="10"
                    android:hint="@string/first_name_hint"
                    android:maxLines="1"
                    android:inputType="text"
                    android:textColor="#efefef"
                    android:textColorHint="#dedede"
                    android:theme="@style/TextInputTheme"
                    android:imeOptions="actionNext"
                    android:nextFocusForward="@+id/lastName"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lastNameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:theme="@style/TextInputTheme"
                android:visibility="gone">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/lastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:backgroundTint="#dedede"
                    android:ems="10"
                    android:hint="@string/last_name_hint"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="#efefef"
                    android:textColorHint="#dedede"
                    android:textIsSelectable="false"
                    android:theme="@style/TextInputTheme"
                    android:imeOptions="actionNext"
                    android:nextFocusForward="@+id/phone"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/phoneLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextInputTheme"
            android:visibility="gone">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="#dedede"
                android:ems="10"
                android:hint="@string/phone_number_hint"
                android:inputType="phone"
                android:maxLines="1"
                android:textColor="#efefef"
                android:textColorHint="#dedede"
                android:textIsSelectable="false"
                android:theme="@style/TextInputTheme"
                android:imeOptions="actionDone"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/emailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextInputTheme">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#dedede"
                android:ems="10"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="#efefef"
                android:theme="@style/TextInputTheme"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextInputTheme">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:backgroundTint="#dedede"
                android:ems="10"
                android:hint="@string/password_hint"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:textColor="#efefef"
                android:theme="@style/TextInputTheme"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/confirm_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextInputTheme"
            android:visibility="gone">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/confirm_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:backgroundTint="#dedede"
                android:ems="10"
                android:hint="@string/confirm_password_hint"
                android:imeOptions="actionSend"
                android:inputType="textPassword"
                android:textColor="#efefef"
                android:theme="@style/TextInputTheme"
                />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="12dp"
            android:background="@drawable/color_button_highlight"
            android:elegantTextHeight="true"
            android:elevation="6dp"
            android:onClick="loginOrSignUp"
            android:text="@string/sign_up_button"
            android:textColor="#fff"/>

        <Button
            android:id="@+id/fb_login_butt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/color_button_fb"
            android:drawableLeft="@drawable/fb_blue_logo"
            android:onClick="loginFacebook"
            android:paddingLeft="34dp"
            android:paddingTop="1dp"
            android:text="@string/sign_up_fb"
            android:textColor="@color/facebook_blue" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/fb_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <Button
            android:id="@+id/forgot_password"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:onClick="forgotPassword"
            android:text="@string/forgot_password_button"
            android:textAllCaps="false"
            android:textColor="#fff"/>

    </LinearLayout>

    <Button
        android:id="@+id/sign_log_switcher_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_horizontal"
        android:layout_margin="6dp"
        android:background="#00ffffff"
        android:elegantTextHeight="true"
        android:elevation="6dp"
        android:onClick="signUpSwitcher"
        android:text="@string/log_in_button"
        android:textColor="#fff"/>

</RelativeLayout>